# Squallz

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  README.zh-CN.md  deny.toml
.github/workflows/: release.yml  zip-fuzz.yml
crates/squallz-cli/: Cargo.toml
crates/squallz-cli/src/: args.rs  errors.rs  main.rs  progress.rs  prompt.rs  ui.rs
crates/squallz-cli/src/commands/: batch.rs  checksum.rs  compress.rs  convert.rs  doctor.rs  duplicates.rs  estimate.rs  export.rs  extract.rs  info.rs  list.rs  mod.rs  nested.rs  recovery.rs  reports.rs  test.rs  update.rs
crates/squallz-cli/tests/: cli_integration.rs
crates/squallz-core/: Cargo.toml
crates/squallz-core/src/: checksum.rs  compound.rs  convert.rs  create.rs  duplicates.rs  filter.rs  inputs.rs  layout.rs  lib.rs  queue.rs  volumes.rs
crates/squallz-format-api/: Cargo.toml
crates/squallz-format-api/src/: entry.rs  error.rs  extract.rs  lib.rs  links.rs  options.rs  progress.rs  registry.rs  safety.rs  traits.rs
crates/squallz-formats/: Cargo.toml
crates/squallz-formats/examples/: create_solid_7z.rs
crates/squallz-formats/src/: lib.rs  sevenzip_bridge.rs
crates/squallz-formats/src/rar/: mod.rs
crates/squallz-formats/src/sevenz/: mod.rs  reader.rs  writer.rs
crates/squallz-formats/src/sevenzip_bridge/: wim_writer.rs
crates/squallz-formats/src/sqz/: mod.rs  reader.rs  writer.rs
crates/squallz-formats/src/stream/: brotli.rs  bzip2.rs  gzip.rs  lz4.rs  mod.rs  xz.rs  zstd.rs
crates/squallz-formats/src/tar/: mod.rs  reader.rs  writer.rs
crates/squallz-formats/src/zip/: datetime.rs  encoding.rs  error.rs  mod.rs  reader.rs  update.rs  writer.rs
crates/squallz-formats/tests/: compound_e2e.rs  convert_e2e.rs  links_extract.rs  sevenz_roundtrip.rs  split_e2e.rs  sqz_roundtrip.rs  stream_roundtrip.rs  tar_roundtrip.rs  zip_crypto.rs  zip_encoding.rs  zip_roundtrip.rs  zip_security.rs  zip_update.rs
crates/squallz-formats/tests/common/: mod.rs
crates/squallz-gui/: Cargo.toml  Info.plist  tauri.conf.json
crates/squallz-gui/capabilities/: default.json
crates/squallz-gui/examples/: gui_browse_bench.rs
crates/squallz-gui/icons/: icon.icns
crates/squallz-gui/localization/en.lproj/: InfoPlist.strings
crates/squallz-gui/src/: audit.rs  bridge.rs  commands.rs  dto.rs  events.rs  integration.rs  jobs.rs  lib.rs  main.rs  nested.rs  open_files.rs  secrets.rs  settings.rs  state.rs  validation_trace.rs
crates/squallz-i18n/: Cargo.toml  build.rs
crates/squallz-i18n/src/: errors.rs  lib.rs
crates/squallz-recovery/: Cargo.toml
crates/squallz-recovery/src/: lib.rs
docs/: exit-codes.md  external-tools-distribution.md  format-support.md  level-mapping.md  licenses.md  platform-integration.md  privacy.md  sqz-container-format-v1.md
docs/github-wiki/: Build-and-Development.md  CLI-Guide.md  Desktop-App.md  FAQ.md  Format-Support.md  GitHub-Repository-Profile.md  Home.md  Privacy-and-Safety.md  Quick-Start.md  README.md  SQZ-Recovery-Container.md  _Sidebar.md
docs/help/: batch-scripts.md  damaged-archive.md  filename-encoding.md  forgot-password.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: audit-style-contract.mjs  tauri-before-build.mjs  tauri-cli.mjs
frontend/src/: App.svelte  design.css  main.ts  platform-typography.css  vite-env.d.ts
frontend/src/components/: AppIcon.svelte  ArchiveReturnStrip.svelte  ChecksumAlgorithmPicker.svelte  ExcludeRulesEditor.svelte  Icon.svelte  SettingsRouteList.svelte  TaskProgressDialog.svelte
frontend/src/lib/: archive.svelte.ts  dev-preview-data.ts  external-tasks.ts  format.ts  formats.svelte.ts  history.svelte.ts  i18n.svelte.ts  ipc.ts  job-title.ts  jobs.svelte.ts  task-dialog.ts  task-window.ts  theme.ts  toasts.svelte.ts  ui-model.ts  uiMode.svelte.ts
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: zip_reader.rs
locales/: en-US.json  zh-CN.json
scripts/: clean_machine_release_install.sh  linux_live_ui_file_manager_signoff.sh  linux_secret_service_smoke.sh  macos_app_smoke.sh  macos_desktop_permission_diagnostics.sh  macos_finder_context_menu_smoke.sh  macos_finder_ui_preflight.sh  macos_keychain_smoke.sh  macos_multi_open_smoke.sh  macos_native_screenshots.sh  macos_packaged_integration_cleanup_smoke.sh  macos_packaged_quick_actions_smoke.sh  par2_standard_tool_smoke.sh  release_finalize_assets.py  release_readiness_gate.sh  release_trust_signoff.sh  ui_token_audit.mjs  windows_credential_manager_smoke.ps1  windows_credential_manager_smoke.sh  windows_live_ui_explorer_signoff.sh  zip64_large_smoke.sh  zip_fuzz_smoke.sh
