[package]
name = "squallz-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Squallz 命令行（sqz）"

[[bin]]
name = "sqz"
path = "src/main.rs"

[dependencies]
squallz-core = { path = "../squallz-core", version = "0.1.0" }
squallz-formats = { path = "../squallz-formats", version = "0.1.0" }
squallz-i18n = { path = "../squallz-i18n", version = "0.1.0" }
squallz-recovery = { path = "../squallz-recovery", version = "0.1.0" }
clap.workspace = true
ctrlc.workspace = true
fs4 = "1"
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-width = "0.2"

# Integration tests drive the binary via CARGO_BIN_EXE_sqz (std::process) and
# parse --json output with serde_json; no extra dev-dependencies needed.
