[package]
name = "squallz-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Squallz 内置格式实现（扩展新格式只改这里）"

[dependencies]
blake3 = "1.8.5"
brotli = "8"
bzip2 = "0.6"
chardetng = "1.0.0"
crc32c = "0.6.8"
crc32fast = "1"
encoding_rs = "0.8.35"
flate2 = "1"
fs4 = "1"
globset.workspace = true
liblzma = "0.4"
lz4_flex = "0.13"
reed-solomon-erasure = { version = "6.0.0", default-features = false }
sevenz-rust2 = "0.21.0"
squallz-format-api = { path = "../squallz-format-api", version = "0.1.0" }
tar = "0.4"
zip = { version = "8.6.0", default-features = false, features = ["aes-crypto", "deflate"] }
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
squallz-core = { path = "../squallz-core", version = "0.1.0" }
